<resources>
    <string name="app_name">JSON Placeholder Client</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="listagem_de_posts">Listagem de Posts</string>
    <string name="nome_do_post">Nome do Post</string>
    <string name="ocorreu_um_erro">Ocorreu um erro!</string>
    <string name="erro_posts_get">Ocorreu um erro ao buscar as informações, verifique sua conexão e tente novamente.</string>
    <string name="erro_users_get">Ocorreu um erro ao buscar os usuários, verifique sua conexão e tente novamente.</string>
    <string name="internet_indisponivel">É necessário estar conectado a internet!</string>
    <string name="adicionar_um_novo">Adicionar um novo</string>
    <string name="titulo">Titulo</string>
    <string name="corpo">Corpo</string>
    <string name="salvar">Salvar</string>
    <string name="erro_save_post">Ocorreu um erro ao salvar o post, tente novamente mais tarde!</string>
    <string name="mensagem_do_sistema">Mensagem do sistema</string>
    <string name="post_add_sucesso">Post cadastrado com sucesso!</string>
    <string name="usuario">Usuário</string>
    <string name="cancelar">Cancelar</string>
    <string name="post_corpo_requerido">É necessário o preenchimento do corpo do Post!</string>
    <string name="post_titulo_requerido">É necessário o preenchimento do titúlo do Post!</string>
    <string name="post_usuario_requerido">É necessário o preenchimento do usuário do Post!</string>
    <string name="desfazer">Desfazer</string>
    <string name="confirmar">Confirmar</string>
    <string name="post_excluido">Post exclúido.</string>
    <string name="confirma_a_exclusao">Confirma a exclusão?</string>
    <string name="excluido_com_sucesso">Excluido com sucesso!</string>
    <string name="carregando">Carregando..</string>
    <string name="id_obrigatorio">Id do usuário é obrigátorio!</string>
    <string name="editar">Editar</string>
    <string name="alterar">Alterar</string>
    <string name="salvo_com_sucesso">Salvo com sucesso!</string>
    <string name="empty_post_content_description">Selecione um post para ser exibido neste espaço.</string>
    <string name="voltar">Voltar</string>
    <string name="notificacao_novo_post">Novo post</string>
    <string name="sair">Sair</string>

</resources>
