<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="br.dev.oliveira.jsonplaceholderclient.views.PostContentFragment">

    <ProgressBar
        android:id="@+id/progress_post_content"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/image_empty"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/empty_post_content_description"
        android:minWidth="200dp"
        android:src="@mipmap/ic_launcher_transparent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:id="@+id/linear_content_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/nome_do_post"
                android:textSize="20sp"/>

            <View
                android:id="@+id/view_post_title_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorDivider"/>

            <TextView
                android:id="@+id/text_post_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:background="@color/colorDivider"
                android:text="@string/usuario"
                android:textSize="14sp"/>
            fo

            <TextView
                android:id="@+id/text_post_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_save_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_radius_primary_inverse"
            android:text="@string/alterar"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
